# monurepo

./: CLAUDE.md  README.md  common-resources.nu  flake.nix  garnix.yaml  lib.nu  mod.nu
.helix/: languages.toml
datatui/: ARCHITECTURE.md  Cargo.toml  EXAMPLES.md  LAYOUT_SUCCESS.md  NEXT_STEPS.md  PLAN.md  README.md  ROADMAP.md  TERMINAL_MANAGEMENT_IMPROVEMENT.md  TODO.md  demo.nu  simple_test.nu  test.nu  test_layout.nu  test_layout_parsing.nu  test_session_management.nu  test_terminal_management.nu
datatui/examples/: events.nu  file_explorer.nu
datatui/src/: commands.rs  main.rs  plugin.rs  terminal.rs  widgets.rs
deepformat/: README.md  mod.nu
enverlay/: README.md  mod.nu
jjiles/: README.md  default-config.toml  deltau.nu  fzf-callbacks.nu  mod.nu
nu_plugin_datalog/: Cargo.toml  PLAN.md  init.plan.md  rust-toolchain.toml  streaming.plan.md
nu_plugin_datalog/src/: conversion.rs  main.rs  plugin.rs  rules_source.rs  state.rs
nu_plugin_datalog/src/commands/: export.rs  mod.rs  reason.rs
nugh/: README.md  mod.nu
nujj/: README.md  atomic.nu  caps.nu  commands.nu  gh.nu  mod.nu  prowser.nu
nupg/: README.md  build.nu  inspect.nu  keywords.txt  mod.nu  pretty.nu  run.nu
nupg/store/: internals.nu  mod.nu
nux/: flake.nu  mod.nu  registries.nu  search.nu  stack.nu
nypst/: README.md  example.nu  mod.nu
prowser/: README.md  mod.nu  path.nu
repage/: README.md  mod.nu  viewers.nu
rescope/: README.md  example.nu  lib.nu
